--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -1,24 +1,24 @@
 {
-  "header": {
-    "content": [
-      {
-        "id": 1,
-        "label": "Contact",
-        "ariaLabel": "contact me",
-        "href": ""
-      },
-      {
-        "id": 2,
-        "label": "Plans",
-        "ariaLabel": "pricing plans",
-        "href": ""
-      },
-      {
-        "id": 3,
-        "label": "Questions",
-        "ariaLabel": "frequently asked questions",
-        "href": ""
-      }
-    ]
-  }
+	"header": {
+		"content": [
+			{
+				"id": 1,
+				"label": "Contact me",
+				"ariaLabel": "contact me",
+				"href": ""
+			},
+			{
+				"id": 2,
+				"label": "Experience",
+				"ariaLabel": "pricing plans",
+				"href": ""
+			},
+			{
+				"id": 3,
+				"label": "Projects",
+				"ariaLabel": "frequently asked questions",
+				"href": ""
+			}
+		]
+	}
 }
