--- a/src/locales/en/header.json
+++ b/src/locales/en/header.json
@@ -1,24 +1,37 @@
 {
-	"header": {
-		"content": [
-			{
-				"id": 1,
-				"label": "Contact me",
-				"ariaLabel": "contact me",
-				"href": ""
-			},
-			{
-				"id": 2,
-				"label": "Experience",
-				"ariaLabel": "pricing plans",
-				"href": ""
-			},
-			{
-				"id": 3,
-				"label": "Projects",
-				"ariaLabel": "frequently asked questions",
-				"href": ""
-			}
-		]
-	}
+  "header": {
+    "content": [
+      {
+        "id": 1,
+        "label": "Contact me",
+        "ariaLabel": "contact me",
+        "href": ""
+      },
+      {
+        "id": 2,
+        "label": "Experience",
+        "ariaLabel": "pricing plans",
+        "href": ""
+      },
+      {
+        "id": 3,
+        "label": "Projects",
+        "ariaLabel": "frequently asked questions",
+        "href": ""
+      }
+    ]
+  },
+  "toaster": {
+    "contact": {
+      "toaster": {
+        "loading": "Sending...",
+        "success": "Message sent!",
+        "error": "An error occurred"
+      }
+    },
+    "preferences": {
+      "lang": "Idioma cambiado",
+      "theme": "Theme changed"
+    }
+  }
 }
