--- a/src/locales/es/index.json
+++ b/src/locales/es/index.json
@@ -22,6 +22,47 @@
     ]
   },
 
+  "experience": {
+    "title": "Experiencia.",
+    "freelance": {
+      "timeLine": "Octubre 2024",
+      "title": "Desarrollador Freelance",
+      "dates": "10/2024 - presente",
+      "content": [
+        "Desarrollo de landing pages para reflejar la escencia de tu negocio en una web.",
+        "Desarrollo de tiendas online (e-comerce) a medida.",
+        "Desarrollo de interfaces de usuario utilizando React para crear experiencias atractivas y fluidas.",
+        "Diseño e implementación de aplicaciones web escalables, optimizando el rendimiento y la accesibilidad.",
+        "Desarrollo de interfaces de usuario utilizando React.js y todo su ecosistema.",
+        "Integración de APIs y servicios backend para garantizar una interacción fluida entre las capas de la aplicación."
+      ]
+    },
+    "gravitad": {
+      "timeLine": "Agosto 2024",
+      "title": "Gravitad - Desarrollador Frontend",
+      "company": "Gravitad",
+      "dates": "07/2024 - presente",
+      "content": [
+        "Desarrollo de interfaces de usuario utilizando React.js con Vite.",
+        "Desarrollo de aplicaciones web.",
+        "Desarrollo de aplicaciones blockchain.",
+        "Trabajar en conjunto con el departamente de UX/UI para hacer una fiel réplica del diseño.",
+        "Desarrollo de interfaces de usuario utilizando React.js y todo su ecosistema.",
+        "Integraciones de conexiones con el departamento de backend."
+      ]
+    },
+    "cabaña": {
+      "timeLine": "Enero 2014",
+      "title": "Cabaña Las Lilas - Mozo de salón",
+      "dates": "01/2014 - 01/2015",
+      "content": [
+        "Mise an place para el servicio.",
+        "Atención y servicio al cliente.",
+        "Manejo de personal del salón."
+      ]
+    }
+  },
+
   "skill-set": {
     "frontend": {
       "label": "Frontend",
