--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -1,23 +1,30 @@
 {
+  "hero": {
+    "strong": "Hi! I'm Sebastian, a developer with over 2 years of experience in the IT field.",
+    "description": "My approach goes beyond writing code; it's about turning ideas into fast and effective applications, where every detail is designed to create unique digital experiences, so users enjoy the experience from the very first click.",
+    "CTA1": "Learn more about me",
+    "CTA2": "Download resume"
+  },
+
   "header": {
     "content": [
       {
         "id": 1,
         "label": "Contact me",
         "ariaLabel": "contact me",
-        "href": ""
+        "href": "#contact-section"
       },
       {
         "id": 2,
         "label": "Experience",
         "ariaLabel": "pricing plans",
-        "href": ""
+        "href": "#experience-section"
       },
       {
         "id": 3,
-        "label": "Projects",
+        "label": "Skills",
         "ariaLabel": "frequently asked questions",
-        "href": ""
+        "href": "#skills-section"
       }
     ]
   },
