--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -116,11 +116,9 @@
 
   "toaster": {
     "contact": {
-      "toaster": {
-        "loading": "Sending...",
-        "success": "Message sent!",
-        "error": "An error occurred"
-      }
+      "loading": "Sending...",
+      "success": "Message sent!",
+      "error": "An error occurred"
     },
     "preferences": {
       "lang": "Idioma cambiado",
@@ -129,9 +127,11 @@
   },
 
   "contact-form": {
-    "title": "Join the digital expansion today",
-    "description": "Tell me about your project idea. I'm ready to help you bring your digital project to life. Let's talk today!",
-    "subtitle": "Get in touch",
+    "slogan1": "Every great project",
+    "slogan2": "Starts with a",
+    "slogan3": "plan",
+    "description": "Send me a message, and I will get back to you shortly to explore how we can collaborate together.",
+    "subtitle": "Contact me!",
 
     "inputs": [
       {
@@ -162,11 +162,6 @@
   },
 
   "footer": {
-    "title": "Join the digital revolution to ",
-    "strong": "empower your business",
-    "description": "No matter your industry, improving your digital presence is just a click away. I can help you achieve your goals.",
-    "action": "Contact me!",
-    "slogan": "Turn your vision into an exceptional digital experience. Let's connect!",
     "content": [
       {
         "id": 1,
