--- a/src/locales/en/index.json
+++ b/src/locales/en/index.json
@@ -3,7 +3,8 @@
 		"strong": "Hi! I'm Sebastian, a developer with over 2 years of experience in the IT field.",
 		"description": "My approach goes beyond writing code; it's about turning ideas into fast and effective applications, where every detail is designed to create unique digital experiences, so users enjoy the experience from the very first click.",
 		"CTA1": "Learn more about me",
-		"CTA2": "Download cv"
+		"CTA2": "Download cv",
+		"CTA3": "Let's talk"
 	},
 
 	"header": {
