--- a/src/locales/es/index.json
+++ b/src/locales/es/index.json
@@ -3,7 +3,8 @@
 		"strong": "+3 años de experiencia  |  Buenos Aires, Argentina.",
 		"description": "Desarrollo software a medida cuidando siempre los detalles y necesidades de cada negocio. Hoy día estoy incursionando en el desarrollo mobile y enfoncado en seguir creciendo como profesional.",
 		"CTA1": "Conocé más sobre mi",
-		"CTA2": "Descargar cv"
+		"CTA2": "Descargar cv",
+		"CTA3": "Hablemos"
 	},
 
 	"header": {
